<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/Beige">

    <ImageButton
        android:id="@+id/fabManageUsers"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Gestionar_usuarios"
        android:src="@drawable/ic_user_temp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/Brunswick_green" />


    <ImageButton
        android:id="@+id/btnLogout"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/Cerrar_sesión"
        android:src="@drawable/ic_logout"
        app:tint="@color/Rust"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Contenedor para botón y tasa (modificado) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rateContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogout">

        <ImageButton
            android:id="@+id/btnUpdateRate"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/update_rate"
            android:src="@drawable/ic_refresh"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:indeterminate="true"
            android:layout_marginTop="16dp"
            android:layout_centerInParent="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <TextView
            android:id="@+id/tvExchangeRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/Tasa"
            android:textColor="@color/Brunswick_green"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnUpdateRate"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/etSearch"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@drawable/edittext_rounded_bg"
        android:hint="@string/Search_product"
        android:inputType="text"
        android:importantForAutofill="yes"
        android:autofillHints="productName"
        android:backgroundTint="@color/Brunswick_green"
        android:textColorHint="@color/Brunswick_green"
        android:textColor="@color/Brunswick_green"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintWidth_max="400dp"
        app:layout_constraintTop_toBottomOf="@id/rateContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProducts"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        android:contentDescription="@string/products_list_description"
        app:layout_constraintTop_toBottomOf="@id/etSearch"
        app:layout_constraintBottom_toTopOf="@id/fabAddProduct"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/fabAddProduct"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="sans-serif-black"
        android:text="@string/AddProduct"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnOption1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/btnOption1"
        android:textSize="11sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/fabAddProduct"
        app:layout_constraintEnd_toEndOf="@id/fabAddProduct"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/btnOption3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/historial_de_ventas"
        android:textSize="11sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnOption2"
        app:layout_constraintEnd_toEndOf="@id/fabAddProduct"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/btnOption2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:text="@string/btnOption2"
        android:textSize="12sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnOption1"
        app:layout_constraintEnd_toEndOf="@id/fabAddProduct"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>